--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://mysqldb/online_hospital?autoreconnect=true&createDatabaseIfNotExist=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.platform=initial
+spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
